updated to use andy.azureedge.net CDN

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ layout: default
 <p>Hi I'm Andy &mdash; partner and technical director of <a class="colorless" href="https://www.orangejetpackstudios.com/">Orange Jetpack Studios</a>, I'm currently living and working in beautiful sunny Kuwait. I am a Microsoft Certified Professional Developer and a recent Master of Software Engineering graduate from Pennsylvania State University.</p>
 <p>I have a passion for the elegance inherent in well-designed software solutions and the beauty that exists in the software we create. I enjoy working with and evangelizing all of the technologies and patterns that create harmony in my software development life and I enjoy sharing my experiences of discovery with others.</p>
 <p>Currently I build web and native mobile applications of all scale with the ASP.NET MVC, Entity Framework, SQL Azure, AngularJS, and the Ionic Framework.</p>
-<p><img src="https://az808808.vo.msecnd.net/assets/collage-1-635783261389926820.png" width="930" height="300" alt="photo collage" /></p>
+<p><img src="https://andy.azureedget.net/assets/collage-1-635783261389926820.png" width="930" height="300" alt="photo collage" /></p>
 
 <h3 class="header">Blog</h3>
 
