fixed CSP; hid GA and Disqus from non-prod site instances

--- a/src/index.html
+++ b/src/index.html
@@ -2,9 +2,9 @@
 layout: default
 ---
 
-<p>Hi I'm Andy &mdash; founder and CTO of <a class="colorless" href="https://www.orangejetpack.com/">Orange Jetpack</a>, I'm currently living and working in beautiful sunny Kuwait. I am a Microsoft Certified Professional Developer and a recent Master of Software Engineering graduate from Pennsylvania State University.</p> 
+<p>Hi I'm Andy &mdash; founder and managing director <a class="colorless" href="https://www.orangejetpack.com/">Orange Jetpack</a>, I'm currently living and working in beautiful sunny Kuwait. I am a Microsoft Certified Professional Developer and a recent Master of Software Engineering graduate from Pennsylvania State University.</p> 
 <p>I have a passion for the elegance inherent in well-designed software solutions and the beauty that exists in the software we create. I enjoy working with and evangelizing all of the technologies and patterns that create harmony in my software development life and I enjoy sharing my experiences of discovery with others.</p>
-<p>Currently I build cloud-based web and mobile applications of all scale with the ASP.NET Core, Entity Framework, SQL Azure, DocumentDB, Redis, Service Bus, Angular, React, and Ionic.</p> 
+<p>Currently I build cloud-based web and mobile applications of all scale with the ASP.NET Core, Entity Framework, SQL Azure, Cosmos DB, Redis, Service Bus, Angular, React, and Ionic.</p> 
 <p><img src="https://andy.azureedge.net/assets/collage-1-635783261389926820.png" width="930" height="300" alt="photo collage" /></p>
 
 <h3 class="header">Blog</h3>
