replace single quotes

--- a/src/index.html
+++ b/src/index.html
@@ -3,9 +3,9 @@ layout: default
 ---
 
 <p>Hi I'm Andy &mdash; I'm currently the CTO of a software services company in beautiful sunny Kuwait.</p> 
-<p>I've spent my career as a software engineer and designer and I’ve built and managed teams, led developer training, founded user groups, and presented at conferences.</p>
+<p>I've spent my career as a software engineer and designer and I've built and managed teams, led developer training, founded user groups, and presented at conferences.</p>
 <p>I have a passion for the elegance inherent in well-designed software solutions and the beauty that exists in the software we create. I enjoy working with and evangelizing all of the technologies and patterns that create harmony in my software development life and I enjoy sharing my experiences with others.</p> 
-<p>You’ll currently find me building cloud-native software solutions with Azure and .NET Core.</p>
+<p>You'll currently find me building cloud-native software solutions with Azure and .NET Core.</p>
 <p><img src="https://andy.azureedge.net/assets/collage-1-635783261389926820.png" width="930" height="300" alt="photo collage" /></p>
 
 <h3 class="header">Blog</h3>
