--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,56 @@
 layout: default
 ---
 
+<script type="application/ld+json">
+{
+    "@context": "http://www.schema.org",
+    "@type": "Person",
+    "@id": "https://andy.mehalick.com/#person",
+    "name": "Andy Mehalick",
+    "alternateName": "Andrew Mehalick",
+    "nationality": "American",
+    "birthPlace" : {
+        "@type": "Place",
+        "address": {
+            "@type": "PostalAddress",
+            "addressLocality": "Willimantic",
+            "addressRegion": "Connecticut",
+            "addressCountry": "US"
+        }
+    },
+    "alumniOf": [
+        {
+            "@type": "CollegeOrUniversity",
+            "name": "Pennsylvania State University"
+        },
+        {
+            "@type": "CollegeOrUniversity",
+            "name": "University at Buffalo"
+        }
+    ],
+    "gender": "Male",
+    "description": "Software Engineer",
+    "jobTitle": "Chief Technology Officer",
+    "worksFor": [
+        {
+            "@type": "Organization",
+            "name": "Bilbayt"
+        }
+    ],
+    "url": "https://andy.mehalick.com",
+    "image": "{{ site.image }}",
+    "sameAs": [
+        "https://www.linkedin.com/in/andymehalick/",
+        "https://github.com/mehalick",
+        "http://stackoverflow.com/users/98736/andy-mehalick",
+        "https://www.facebook.com/andy.mehalick",
+        "https://instagram.com/andymehalick",
+        "https://twitter.com/AndyMehalick",
+        "https://vimeo.com/andymehalick"
+    ]
+}
+</script>
+
 <p>Hi I'm Andy &mdash; I'm currently the CTO of a software services company in beautiful sunny Kuwait.</p> 
 <p>I've spent my career as a software engineer and designer and I've built and managed teams, led developer training, founded user groups, and presented at conferences.</p>
 <p>I have a passion for the elegance inherent in well-designed software solutions and the beauty that exists in the software we create. I enjoy working with and evangelizing all of the technologies and patterns that create harmony in my software development life and I enjoy sharing my experiences with others.</p> 
